--- a/assets/style/menu.css
+++ b/assets/style/menu.css
@@ -9,11 +9,20 @@ body{
 .logo-pagina-inicial img{
     width: 150px;
 }
+.logo-padrao img{
+    width: 130px;
+}
 .menu{
     display: table;
     
     width: 100%;
     height: 100px;
+}
+.menu-padrao{
+    margin: auto;
+    width: 90%;
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.062);
 }
 .overlay-button {
     position: absolute;
@@ -47,6 +56,9 @@ body::-webkit-scrollbar-thumb {
     .logo-pagina-inicial img{
         padding: 36px;
     }
+    .logo-padrao img{
+        padding: 15px 36px 15px 36px;
+    }
     .abas-pagina-inicial ul{
         text-align: right;
         margin-right: 50px;
@@ -55,10 +67,7 @@ body::-webkit-scrollbar-thumb {
         position: relative;
         display: inline-block;
         padding: 0 40px 0 40px;
-    }
-    label[for="bt_menu"]{
-        display: none;
-    }   
+    }  
     .abas-pagina-inicial a{
         text-decoration: none;
         cursor: pointer;
@@ -89,6 +98,47 @@ body::-webkit-scrollbar-thumb {
         -webkit-transform: scaleX(1);
         transform: scaleX(1);
     }
+    .abas-padrao ul{
+        text-align: right;
+        margin-right: 50px;
+    }
+    .abas-padrao li{
+        position: relative;
+        display: inline-block;
+        padding: 0 40px 0 40px;
+    }  
+    .abas-padrao a{
+        text-decoration: none;
+        cursor: pointer;
+        color: black;
+        text-transform: lowercase;
+    }
+    .abas-padrao a::before {
+        content: "";
+        position: absolute;
+        width: 45%;
+        height: 4px;
+        top: 55px;
+        left: calc(50% - 22.5%);
+        background-color: hsl(0, 0%, 28%);
+        border-radius: 5px;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
+    }
+    .abas-padrao a:hover{
+        font-weight: bold;
+    }
+    .abas-padrao a:hover:before {
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+    }
+    label[for="bt_menu"]{
+        display: none;
+    } 
 }
 @media(max-width: 800px){
     .menu{
@@ -119,12 +169,8 @@ body::-webkit-scrollbar-thumb {
     #bt_menu:checked ~ .abas-pagina-inicial{
         margin-right: 0px;
     }
-    .ativado{
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: black;
-        opacity: 0.7;
+    #bt_menu:checked ~ .abas-padrao{
+        margin-right: 0px;
     }
     .abas-pagina-inicial{
         top: 0;
@@ -137,15 +183,46 @@ body::-webkit-scrollbar-thumb {
         right: 0;
         margin-right: -100%;
     }
-    .abas-pagina-inicial ul{
+    .ativado{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.7;
+    }
+    .abas-padrao ul{
         padding-top: 40px;
     }
-    .abas-pagina-inicial li{
+    .abas-padrao li{
         text-align: right;
         padding: 20px 50px 20px 0;
         list-style-type: none;
     }
-    .abas-pagina-inicial a{
+    .abas-padrao a{
+        text-decoration: none;
+        font-weight: bold;
+        color: black;
+    }
+    .abas-padrao{
+        top: 0;
+        position: fixed !important;
+        z-index: 3;
+        background-color: white;
+        width: 200px !important;
+        height: 100% !important;
+        transition: 1s;
+        right: 0;
+        margin-right: -100%;
+    }
+    .abas-padrao ul{
+        padding-top: 40px;
+    }
+    .abas-padrao li{
+        text-align: right;
+        padding: 20px 50px 20px 0;
+        list-style-type: none;
+    }
+    .abas-padrao a{
         text-decoration: none;
         font-weight: bold;
         color: black;
