--- a/assets/style/about.css
+++ b/assets/style/about.css
@@ -25,14 +25,14 @@
 }
 .titulo-main h1{
     margin-top: 20px;
-    font-size: 70px;
+    font-size: 30pt;
 }
 .titulo-main{
     text-align: center;
 }
 .titulo-main h2{
     font-size: 15px;
-    margin-top: -50px;
+    margin-top: -20px;
     margin-bottom: 70px;
 }
 .texto-main{
@@ -75,14 +75,6 @@
         font-size: 8pt;
         width: 200px;
         padding: 10px;
-    }
-    .titulo-main h1{
-        font-size: 45px;
-    }
-    .titulo-main h2{
-        font-size: 15px;
-        margin-top: -30px;
-        margin-bottom: 50px;
     }
     .texto-main p{
         font-size: small;
