--- a/assets/style/img-home.css
+++ b/assets/style/img-home.css
@@ -1,17 +1,35 @@
 .imagens{
-    margin-top: -200px;
+    margin-top: -160px;
 }
-#img-slider{
-    background-image: url(../../image/imagens_home/imagem_1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+.imagem-tela-grande{
+    position: absolute;
+    z-index: -1;
     width: 100%;
-    padding-top: 26.5%;
-    padding-bottom: 26.5%;
-    transition: 1s all;
+    height: 100%;
+    object-fit: cover;
+}
+@media(min-width: 700px){
+    .divisão{ /*altura do rodapé*/
+        position: relative;
+        width: 100%;
+        height: 2px;
+        margin-bottom: 100vh;
+    }
 }
 @media(max-width: 800px){
+    .imagem-tela-grande{
+        display: none;
+    }
     .imagens{
         margin-top: 0;
+    }
+    #img-slider{
+        background-image: url(../../image/imagens_home/imagem_1.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        padding-top: 26.5%;
+        padding-bottom: 26.5%;
+        transition: 1s all;
     }
 }
