--- a/assets/style/about.css
+++ b/assets/style/about.css
@@ -9,7 +9,7 @@
     text-align: center;
 }
 .img{
-    background-image: url(../../image/banner-about/banner.png);
+    background-image: url(https://source.unsplash.com/random/1440x750); /*colocar depois ../../image/banner-about/banner.png*/
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
