--- a/assets/style/jobs.css
+++ b/assets/style/jobs.css
@@ -20,7 +20,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover !important;
     transition: 1s all;
 }
 .imgTextInfo {
@@ -30,7 +30,8 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    color: rgb(0, 0, 0);    
+    color: rgb(255, 255, 255);    
+    font-weight: bold;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
