--- a/assets/style/album.css
+++ b/assets/style/album.css
@@ -19,10 +19,10 @@
 }
 .infos-album, .titulo-main{
     position: absolute;
-    width: 400px;
+    width: 65%;
     text-align: center;
     top: calc(50% - 30px);
-    left: calc(50% - 200px);
+    left: calc(50% - 32.5%);
     color: white;
 }
 .titulo-main{
@@ -58,4 +58,44 @@
 .maisAlbuns{
     width: 98%;
     margin: auto;
+}
+.divBt{
+    text-align: center;
+    margin: 50px;
+}
+.voltarAlbum{
+    width: 200px;
+    padding: 10px;
+
+    cursor: pointer;
+
+    border-radius: 2px;
+    border: 0;
+
+    background-color: rgb(223, 223, 223);
+    color: rgb(90, 90, 90);
+
+    font-weight: bold;
+
+    transition: 0.5s all;   
+}
+@media(max-width: 800px){
+    .infos-album, .titulo-main{
+        top: calc(50% - 50px);
+    }
+    .titulo-main{
+        font-size: 26pt;
+        margin-top: 40px;
+    }
+    .infos-album span{
+        font-size: small;
+    }
+    .img-album{
+        padding: 0;
+        height: 350px;
+    }
+    .banner-escurecido{
+        padding: 0;
+        height: 350px;
+    }
 }
