--- a/assets/style/img-home.css
+++ b/assets/style/img-home.css
@@ -34,6 +34,7 @@
     }
     #img-slider{
         background-image: url(../../image/imagens_home/imagem_1.jpg);
+        filter: grayscale(1);
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
